@@ -1,7 +1,7 @@
 /*
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
  *
- * Copyright (c) 2010-2012 Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2010-2015 Oracle and/or its affiliates. All rights reserved.
  *
  * The contents of this file are subject to the terms of either the GNU
  * General Public License Version 2 only ("GPL") or the Common Development
@@ -40,7 +40,8 @@
 
 package org.glassfish.jersey.examples.httpsclientservergrizzly;
 
-import org.glassfish.jersey.internal.util.Base64;
+import java.nio.charset.Charset;
+import javax.xml.bind.DatatypeConverter;
 
 import javax.ws.rs.GET;
 import javax.ws.rs.Path;
@@ -73,7 +74,7 @@ public class RootResource {
         String auth = headers.getRequestHeader("authorization").get(0);
 
         auth = auth.substring("Basic ".length());
-        String[] values = new String(Base64.decodeAsString(auth)).split(":");
+        String[] values = new String(DatatypeConverter.parseBase64Binary(auth), Charset.forName("ASCII")).split(":");
 
         // String username = values[0];
         // String password = values[1];
